--- a/endnote.bib
+++ b/endnote.bib
@@ -2205,3 +2205,22 @@ Publisher: Springer},
 	keywords = {Age Differences, Competence, Cues, Morality, Reaction Time, Sensitivity (Personality), Time On Task},
 	pages = {85--100},
 }
+
+
+@incollection{brambilla_primacy_2021,
+	title = {The primacy of morality in impression development: {Theory}, research, and future directions},
+	volume = {64},
+	shorttitle = {Chapter {Four} - {The} primacy of morality in impression development},
+	url = {https://www.sciencedirect.com/science/article/pii/S0065260121000113},
+	language = {en},
+	urldate = {2023-04-03},
+	booktitle = {Advances in {Experimental} {Social} {Psychology}},
+	publisher = {Academic Press},
+	author = {Brambilla, Marco and Sacchi, Simona and Rusconi, Patrice and Goodwin, Geoffrey P.},
+	editor = {Gawronski, Bertram},
+	month = jan,
+	year = {2021},
+	doi = {10.1016/bs.aesp.2021.03.001},
+	keywords = {Morality, Person perception, Group impressions, Impression development},
+	pages = {187--262},
+}
