--- a/r-references.bib
+++ b/r-references.bib
@@ -576,3 +576,20 @@ Output},
   pages = {3393},
   doi = {10.21105/joss.03393},
 }
+@Manual{R-ggcorrplot,
+  title = {ggcorrplot: Visualization of a Correlation Matrix using 'ggplot2'},
+  author = {Alboukadel Kassambara},
+  year = {2022},
+  note = {R package version 0.1.4},
+  url = {https://CRAN.R-project.org/package=ggcorrplot},
+}
+@Article{R-lubridate,
+  title = {Dates and Times Made Easy with {lubridate}},
+  author = {Garrett Grolemund and Hadley Wickham},
+  journal = {Journal of Statistical Software},
+  year = {2011},
+  volume = {40},
+  number = {3},
+  pages = {1--25},
+  url = {https://www.jstatsoft.org/v40/i03/},
+}
