--- a/Notebook_Pos_Self_Salience_APA.rmd
+++ b/Notebook_Pos_Self_Salience_APA.rmd
@@ -28,7 +28,7 @@ authornote: |
   Authors contriubtion: HCP, JS, & KP design the study, HCP collected the data, HCP analyzed the data and drafted the manuscript. All authors read and agreed upon the current version of the manuscripts.
 
 abstract: |
- Morality is central to social life and dominates our social evaluations. Previous studies reported a negative bias toward moral information in visual processing. However, later studies reported mixed results. Here we investigated the effect of morality on perceptual decision-making through an associative learning task across five experiments (N = 192), in which participants first learned associations between different geometric shapes and moral characters and then performed a simple perceptual matching task. The results from Bayesian hierarchical modeling, which synthesized data from five experiments, revealed a robust prioritization effect of good character-related shapes, i.e., participants responded faster and more accurately to shapes that were associated with good characters than shapes associated with neutral or bad characters. We then examined whether the prioritization of good character was due to valence alone or an interaction between valence and self-referential processing. Bayesian models based on three experiments (N = 108) revealed that the prioritization effect of good character was robust when referred to the self but weak or non-exist when referred to others. Additional two experiments (N = 104) further revealed that the mutual facilitation between good character and the self occurred even when one of them was task-irrelevant. Together, the results suggested a robust prioritization effect of good character and that the spontaneous self-referential process is the key to such a prioritization effect.
+ Morality dominates evaluations for self and others. This primacy of morality implies moral information is prioritized in cognitive processing. Indeed, previous studies reported a prioritization of negative moral information in visual processing. However, these findings were debated either for a lack of replicability or for being contaminated by other confounding factors. Here we investigated whether moral information is prioritized and, if yes, why. To control potential confounding factors such as the priming effect, we employed a well-controlled cognitive task, where participants first acquired the moral meaning of different geometric shapes (counter-balanced between participants) and then performed a simple perceptual matching task. Across five experiments (N = 192), we found a robust prioritization effect of good characters, i.e., participants responded faster and more accurately to shapes associated with good characters than shapes associated with neutral or bad characters. To understand the potential mechanisms, we examined two competing explanations for the prioritization of good characters: valence account and self-binding account. The former predicts a main effect of moral valence while the latter predicts an exclusive prioritization effect of self-referential good character. Across three experiments (N = 108) where moral characters of different valence were referring to the self or to others, we found evidence for the self-binding account: good characters associated with the self were prioritized but not when associated with others. Two additional experiments (N = 104) further suggested a spontaneous binding between good characters and the self: performance was improved even when self-referential or moral information was task-irrelevant. Together, these results suggested a robust prioritization effect of good character and that the spontaneous self-referential process is the key to such a prioritization effect.
   
  <!-- https://tinyurl.com/ybremelq -->
   
@@ -100,14 +100,15 @@ Summary:
         our results
 -->
 
-Morality dominates human life [@haidt_morality_2010]. Thus, gathering information about morality efficiently and accurately is crucial for individuals to navigate the social world [@brambilla_primacy_2021]. This importance of morality in information processing naturally leads to the hypothesis that morality-related information is prioritized in information processing, especially when attentional resources are limited. After all, previous findings revealed that stimuli that are of subjective value to humans are prioritized, e.g., threatening stimuli [e.g., @ohman_face_2001], rewards [@anderson_value_2011], or self-related stimuli [@sui_self_attention_2019]. Indeed, a few studies reported a prioritization effect of negative moral information in visual processing: negative moral trait words  [@ybarra_young_2001; @gantman_moral_2014] and faces associated with bad behaviors [@anderson_visual_2011; @eiserbeck_visual_2020] were responded faster. 
+Morality is central to human life [@haidt_morality_2010]. Thus, gathering information about morality efficiently and accurately is crucial for individuals to navigate the social world [@brambilla_primacy_2021]. The importance of morality naturally leads to the hypothesis that morality-related information is prioritized in information processing, especially when attentional resources are limited. This hypothesis is plausible because a large volume of studies has reported that valuable stimuli are prioritized, e.g., threatening stimuli [e.g., @ohman_face_2001], rewards [@anderson_value_2011], or self-related stimuli [@sui_self_attention_2019]. Consistent with this hypothesis, a few studies reported a prioritization effect of negative moral information in visual processing: negative moral trait words  [@fiske_attention_1980; @ybarra_young_2001; @gantman_moral_2014] and faces associated with bad behaviors [@anderson_visual_2011; @eiserbeck_visual_2020] attracted more attention and were responded faster. 
 
+However, not all data support this negative moral bias effect. First, the opposite effect was also reported. For example, @shore_social_2013 found that faces with positive interaction in a trust game were prioritized in the pre-attentive process. Also, Abele and Bruckmueller found faster responses to moral words were not moderated by valence [@abele_bigger_2011]. Second, the robustness of the negative moral bias effect is questioned, a direct replication study failed to support the conclusion that faces associated with bad social behaviors dominate visual awareness [eg., @stein_no_2017]. Third, the prioritization effect of morality might be confounded with other factors, such as the priming effect [@firestone_cognition_2015; @firestone_moral_2016; @jussim_interpretations_2016] or differences between lexical characteristics [Larsen et al., 2006]. In short, while the importance of morality is widely recognized and there is initial evidence for a negative moral bias, whether moral information is prioritized in perceptual processing is still an open question. 
 
-However, not all data support the negative bias. First, the opposite effect was also reported. For example, @shore_social_2013 found that faces with positive interaction in a trust game were prioritized in the pre-attentive process. Also, Abele and Bruckmueller found faster responses to moral words were not moderated by valence [@abele_bigger_2011]. Second, the robustness of previous results is questioned [eg., @stein_no_2017]. Third, the prioritization effect of morality might be confounded with other factors [@firestone_cognition_2015; @firestone_moral_2016; @jussim_interpretations_2016]. In short, while the importance of morality is widely recognized, whether negative moral information is prioritized in perceptual decision-making is still an open question.  
+Here, we conducted a series of well-controlled experiments to examine the prioritization effect of morality and its potential mechanisms. To eliminate the priming effect and other potential confounding factors, we employed a cognitive task where participants first acquired moral meanings of geometric shapes and then perform a simple perceptual matching task. The instruction-based associative learning task is based on the fact that humans can quickly learn associations between symbols and change subsequent behaviors accordingly [**citations**]. This instruction-based associative learning task is widely used in aversive learning and value-based learning [@atlas_instructions_2022; @deltomme_instructed_2018]. Unlike previous studies relies on faces or words as materials, stimuli in the current study are geometric shapes, whose moral meanings were acquired right before the perceptual matching task. By counter-balancing associations between shapes and labels of moral characters, we eliminated confounding effects by stimuli. Also, in the matching task, we repeatedly present a few pairs of shapes and labels to participants, the results can not be explained by semantic priming [@unkelbach_chapter_2020], which is the center of the debate on previous results [@gantman_moral_2015; @gantman_see_2016; @firestone_cognition_2015; @Firestone_2016_BBS; @jussim_interpretations_2016]. Furthermore, in a series of control experiments, we confirmed that it is the moral content that drove the prioritization effect, instead of other factors such as familiarity. 
 
-Here, we conducted experiments to examine the prioritization effect of morality. We investigated how immediately acquired moral character information modulates the processing of neutral geometric shapes in a perceptual matching task. The associative learning task is based on the fact that humans can quickly learn associations between symbols and change subsequent behaviors accordingly. This associative learning task is widely used in aversive learning and value-based learning [@atlas_instructions_2022; @deltomme_instructed_2018]. Unlike previous studies relies on faces or words as materials, stimuli used in the social associative task are geometric shapes, which acquire moral meaning before the perceptual matching task. Moreover, associations between shapes and different labels of moral characters are counter-balanced between participants, thus eliminating confounding effects by stimuli. Also, in the matching task, we repeatedly present a few pairs of shapes and labels to participants, the results can not be explained by semantic priming [@unkelbach_chapter_2020], which is the center of the debate on previous results [@gantman_moral_2015; @gantman_see_2016; @firestone_cognition_2015; @Firestone_2016_BBS; @jussim_interpretations_2016]. We found a robust effect that shapes associated with good character are prioritized in the perceptual matching task. In a series of control experiments, we further confirmed that it is the moral content that drove the prioritization effect, instead of other factors such as familiarity. 
+If moral character information is prioritized, the next question is why? One possible explanation is the valence-based account, which has been applied to explain both positive and negative biases. For example, the negative bias toward moral information was explained by a threat detection mechanism which might be general for all negative information [@anderson_value_2011]. The positive bias toward moral information, on the other hand, was also explained by the positive valence of the stimuli [@shore_social_2013]. However, these explanations often ignore the fact that valence is subjective *per se* [@juechems_where_2019]. That is, being related to a person is the premise of a stimulus or outcome being of value to the person. The subjective value is “a broader concept that refers to the personal significance or importance that a person assigns to a particular stimulus or outcome” and when the outcome is affective or emotional, researchers also called it “valence”, i.e., positive or negative [@carruthers_valence_2021]. Moreover, our previous studies found that the self-concept can serve as a binding factor and merely associating with the self can prioritize stimuli in perception, attention, working memory, and long-term memory [@sui_self_attention_2019; @sui_tics_2015], especially for positive information [@Hu_2020_GoodSelf]. These findings suggested that the prioritization of moral information might be a result of spontaneous self-binding. 
 
-If moral character information is prioritized, the next question is how? Previous studies explain the effect based on valence. For example, the negative bias toward moral information is explained by the valence of moral information, and threat detection was supposed to be the potential mechanism [@anderson_value_2011]. The positive bias toward moral information, on the other hand, is explained by the potential positive value of the stimuli [@shore_social_2013]. However, these explanations often ignore the fact that valence and value are subjective *per se* [@juechems_where_2019]. That is, being related to a person, i.e., self-relevance, is the premise of a stimulus or outcome being of value to the person. The subjective value is “ a broader concept that refers to the personal significance or importance that a person assigns to a particular stimulus or outcome” and when the outcome is affective or emotional, researchers also called it “valence”, i.e., positive or negative [@carruthers_valence_2021]. Previous studies found that merely associating with the self can prioritize stimuli in perception, attention, working memory, and long-term memory [@sui_self_attention_2019; @sui_tics_2015]. To explore the role of valence and self-relevance in the prioritization effect of moral information, we included self-relevance as an independent variable and instructed participants on which moral character is self-referencing and which is not. We then tested whether the prioritization of moral character is by valence only or by the interaction between self-relevance and moral valence. The results revealed that prioritization of good character only occurred when they referred to the self of participants. These results were further confirmed in the subsequent experiments, where moral stimuli did not explicitly refer to the self or others but were merely presented together with labels of the self or others. The results revealed a mutual facilitation effect of good character and the self, suggesting spontaneous moral self-referential as a novel mechanism underlying the prioritization of good character in perceptual decision-making.
+To test the valence account and self-binding account in the prioritization effect of moral information, we included self-relevance as an independent variable and instructed participants on which moral character is self-referential and which is not. We then tested whether the prioritization of moral character is by valence only or by the interaction between self-relevance and moral valence. The results revealed that prioritization of good character only occurred when they referred to the self of participants. These results were further confirmed in the subsequent experiments, where moral stimuli did not explicitly refer to the self or others but were merely presented together with labels of the self or others. Together, these data revealed a mutual facilitation effect of good character and the self, suggesting spontaneous moral self-referential as a novel mechanism underlying the prioritization of good character in perceptual matching.
 
 <!-- 
 we attempted to distinguish these two possibilities by a social associative learning task in which physical features had minimal influences — participants performed a perceptual matching task after associated different moral characters (good, neutral, and bad) with different geometric shapes. If there is a positivity effect, there should be an advantage for shapes associated with good character over shapes associated with neutral or bad shapes. If there is a negativity effect, the advantage should be occur on shapes associated with bad characters. The first four experiments and two additional follow-up experiments provided strong evidence for good character effect in the current paradigm.
